--- a/themes/upbound/layouts/_default/home.html
+++ b/themes/upbound/layouts/_default/home.html
@@ -53,7 +53,7 @@
             </div>
             <div class="element-content">
                 <div class="element-page-title">
-                    <h3><a href="/quickstart" target="_blank" class="stretched-link">Quickstart</a></h3>
+                    <h3><a href="/quickstart/" target="_blank" class="stretched-link">Quickstart</a></h3>
                  </div>
                 <div class="element-description">
                     Create your first Upbound Managed Control Plane and connect it to your cloud provider.
