--- a/themes/upbound/layouts/partials/body/content-body.html
+++ b/themes/upbound/layouts/partials/body/content-body.html
@@ -1,17 +1,24 @@
 <div class="">
 	<div class="content-title pb-4">{{.Title}}</div>
     {{ .Content }}
-    {{if .Page.IsSection }}
-        
+
+	{{ if eq .Page.Params.product "crds" }}
+	<ul>
+		{{ partial "body/crds" .}}
+	</ul>
+
+
+    {{ else if .Page.IsSection }}
+
 	<ul>
         {{ range .Pages }}
-            
+
 		<li>
 			<a href="{{.Permalink}}">{{.Title}}</a>
 		</li>
         {{ end }}
-        
+
 	</ul>
     {{ end }}
-    
+
 </div>
