--- a/themes/upbound/assets/scss/_variables.scss
+++ b/themes/upbound/assets/scss/_variables.scss
@@ -73,7 +73,7 @@ $dark-spring-green: #2f6a31ff;
 $field-drab: #78640dff;
 $chocolate: #7b3b0aff;
 $barn-red: #780f07ff;
-$french-gray: #afb3caff; 
+$french-gray: #afb3caff;
 $lavender-web: #d9ddfcff;
 $cool-gray: #828497ff;
 $french-gray-2: #b9bcd5ff;
@@ -101,6 +101,27 @@ $body-min-width:          20rem !default;
 
 $color-admonition-background: transparent;
 
+$crd-description-color: $up-grey-500;
+$body-font-color: $font-color-dark;
+$content-link-color: $up-blue-300n;
+$crd-header-color: $up-purple-500;
+$crd-row-border: $up-grey-300;
+$expand-box-background: $up-grey-000;
+$minus-svg: url("/img/lightbox/minus-black.svg");
+$plus-svg: url("/img/lightbox/plus-black.svg");
+$sort-down: url("/img/lightbox/sort-down-dark.svg");
+$sort-up: url("/img/lightbox/sort-up-dark.svg");
+$link-icon-fill: $up-blue-300n;
+$required-color: $up-red-300n;
+$required-background: $up-grey-100;
+$string-color: $up-green-300n;
+$string-border-color: $up-green-300n;
+$object-color: $up-orange-300n;
+$object-border-color: $up-orange-300n;
+$boolean-color: $up-blue-300n;
+$boolean-border-color: $up-blue-300n;
+$integer-color: $up-yellow-300n;
+$integer-border-color: $up-yellow-300n;
 
 :root {
   font-size: $font-size-root;
