--- a/themes/upbound/assets/scss/_crds.scss
+++ b/themes/upbound/assets/scss/_crds.scss
@@ -1,3 +1,15 @@
+.crd-grid {
+
+  @include media-breakpoint-up(xl) {
+  display: grid;
+  grid-template-columns: 336px minmax(0,.98fr);
+  grid-template-rows: 1fr auto;
+  grid-template-areas:
+  "left-sidebar-nav content-body right-sidebar-toc"
+  "footer-container footer-container footer-container";
+  }
+
+}
 @mixin vertical-bar {
     content: "";
     position: absolute;
