--- a/themes/upbound/layouts/_default/baseof.html
+++ b/themes/upbound/layouts/_default/baseof.html
@@ -11,7 +11,7 @@
 
     {{ partial "body/top-nav" .}}
 
-    <div class="grid" data-bs-spy="scroll" data-bs-target="#TableOfContents">
+    <div class="{{ if eq $.Params.Product "crds" }}crd-grid{{else}} grid {{ end }} " data-bs-spy="scroll" data-bs-target="#TableOfContents">
       {{ partialCached "icons/sprites" . }}
       {{ partial "body/left-sidebar-nav" .}}
 
