--- a/themes/upbound/layouts/partials/body/crds.html
+++ b/themes/upbound/layouts/partials/body/crds.html
@@ -83,7 +83,7 @@
                             </div>
                         {{ end }}
                         <div class="up-button-container mobile-hidden">
-                                <a href="#content">
+                                <a href="#{{$kind}}">
                                 <button type="button" class="up-button btn" title="Back to top"></button>
                                 <span>Back to top</span>
                                 </a>
