--- a/themes/upbound/assets/scss/main.scss
+++ b/themes/upbound/assets/scss/main.scss
@@ -4,6 +4,7 @@
 /* purgecss start ignore */
 @import "color-modes";
 @import "lightbox";
+@import "crds";
 /* purgecss end ignore */
 @import "top-nav";
 @import "left-sidebar-nav";
